Fix erronous database query

After three days of debugging, refreshing related autotests, writing more tests,
hunting for differences between autotest mock components and real ones and digging
deep into database queries related to saving paths, I am happy to announce that I
have a fix which changes a single _ to /.

I guess the original idea might have been to handle both unix and windows path
separators. However, based on my digging, I think Qt does that anyhow in every case
before anything is written to db. Also, the directories saved into db always come
from MountPointManager's getRelativePath, which has never a trailing /, so the
slash instead of underscore should always be a correct character here to match
subdirectories.

BUG: 475528